--- a/index.html
+++ b/index.html
@@ -290,60 +290,85 @@
 
     <!-- HHHHHHHHHHHHHHHHHH      Development Team      HHHHHHHHHHHHHHHH -->
 
-    <div id="team" class="wrapper">
-        <div class="container-fluid">
-            <h2 class="animation-box wow bounceIn animated">DEVELOPMENT TEAM</h2>
-            <div class="virticle-line"></div>
-            <div class="circle"></div>
-            <div class="row">
-                <div class="col-md-2 col-sm-4 col-md-offset-3 wow animated fadeInLeft">
-                    <img src="img/team1.png" alt="team">
-                    <img src="img/icon-p.png" alt="icon-p" class="icon-p">
-                    <h3>Jhon Doe</h3>
-                    <p>DEVELOPER</p>
-                    <div class="img-hover">
-                         <ul class="social-icon text-center">
-                            <li class="wow animated fadeInLeft facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="wow animated fadeInLeft twitter"><a href="#"><i class="fa fa-twitter"></i></a>
-                            <li class="wow animated fadeInRight linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li class="wow animated fadeInRight googleplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        </ul>
-                        <img src="img/icon-m.png" alt="icon-m" class="icon-m">   
+    <section id="team" class="block">
+        <div class="container">
+            <div class="title-area text-center">
+                <h1 class="section-title">who developed lucy</h1>
+                <hr class="title-under-line-top">
+                <hr class="title-under-line-bottom">
+            </div>
+            <div class="row developer-area-wraper">
+                <div class="col-md-6 col-sm-12">
+                    <div class="row developer-card">
+                        <div class="col-md-6 col-sm-6 no-pad-left-right">
+                            <img class="img-res" src="img/Chairpersons_2.png" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-6 text-center developer-desc">
+                            <p class="developer-name">Smith Mehra</p>
+                            <p class="developer-designation">Graphics Designer</p>
+                            <ul class="team-social">
+                                <li class="wow animated fadeInLeft facebook animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-facebook"></i></a></li>
+                                <li class="wow animated fadeInLeft linkedin animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                                <li class="wow animated fadeInRight googleplus animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
+                                <li class="wow animated fadeInRight github animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-github"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-4 animation-box wow bounceIn animated">
-                    <img src="img/team2.png" alt="team">
-                    <img src="img/icon-p.png" alt="icon-p" class="icon-p">
-                    <h3>Riyana</h3>
-                    <p>DEVELOPER</p>
-                    <div class="img-hover">
-                         <ul class="social-icon text-center">
-                            <li class="wow animated fadeInLeft facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="wow animated fadeInLeft twitter"><a href="#"><i class="fa fa-twitter"></i></a>
-                            <li class="wow animated fadeInRight linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li class="wow animated fadeInRight googleplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        </ul>
-                        <img src="img/icon-m.png" alt="icon-m" class="icon-m">   
+                <div class="col-md-6 col-sm-12">
+                    <div class="row developer-card">
+                        <div class="col-md-6 col-sm-6 no-pad-left-right">
+                            <img class="img-res" src="img/Chairpersons_3.png" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-6 text-center developer-desc">
+                            <p class="developer-name">Wiliams White</p>
+                            <p class="developer-designation">Apps Developer</p>
+                            <ul class="team-social">
+                                <li class="wow animated fadeInLeft facebook animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-facebook"></i></a></li>
+                                <li class="wow animated fadeInLeft linkedin animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                                <li class="wow animated fadeInRight googleplus animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
+                                <li class="wow animated fadeInRight github animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-github"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-4 wow animated fadeInRight">
-                    <img src="img/team3.png" alt="team">
-                    <img src="img/icon-p.png" alt="icon-p" class="icon-p">
-                    <h3>RobertSmith</h3>
-                    <p>DEVELOPER</p>
-                    <div class="img-hover">
-                         <ul class="social-icon text-center">
-                            <li class="wow animated fadeInLeft facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="wow animated fadeInLeft twitter"><a href="#"><i class="fa fa-twitter"></i></a>
-                            <li class="wow animated fadeInRight linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li class="wow animated fadeInRight googleplus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        </ul>
-                        <img src="img/icon-m.png" alt="icon-m" class="icon-m">   
+                <div class="col-md-6 col-sm-12">
+                    <div class="row developer-card">
+                        <div class="col-md-6 col-sm-6 no-pad-left-right">
+                            <img class="img-res" src="img/Chairpersons_1.png" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-6 text-center developer-desc">
+                            <p class="developer-name">Snikda Chacra</p>
+                            <p class="developer-designation">Apps Developer</p>
+                            <ul class="team-social">
+                                <li class="wow animated fadeInLeft facebook animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-facebook"></i></a></li>
+                                <li class="wow animated fadeInLeft linkedin animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                                <li class="wow animated fadeInRight googleplus animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
+                                <li class="wow animated fadeInRight github animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-github"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div> <!-- /.row -->
-        </div> <!-- /.container -->
-    </div> <!-- /#team -->
+                <div class="col-md-6 col-sm-12">
+                    <div class="row developer-card">
+                        <div class="col-md-6 col-sm-6 no-pad-left-right">
+                            <img class="img-res" src="img/tm2.png" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-6 text-center developer-desc">
+                            <p class="developer-name">Alia Nehra</p>
+                            <p class="developer-designation">Apps Developer</p>
+                            <ul class="team-social">
+                                <li class="wow animated fadeInLeft facebook animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-facebook"></i></a></li>
+                                <li class="wow animated fadeInLeft linkedin animated" style="visibility: visible; animation-name: fadeInLeft;"><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                                <li class="wow animated fadeInRight googleplus animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
+                                <li class="wow animated fadeInRight github animated" style="visibility: visible; animation-name: fadeInRight;"><a href="#"><i class="ion-social-github"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     
     <!-- HHHHHHHHHHHHHHHHHH        Contact Us          HHHHHHHHHHHHHHHH -->
@@ -375,8 +400,8 @@
                             <textarea class="form-control" placeholder="Message" name="message" id="message"></textarea>
                         </div>
                         <div class="col-md-12 text-center submit-btn-wraper">
-                            <button type="submit" name="submit" id="submit" class="btn btn-default btn-download btn-contact">SEND MESSAGE<i class="ion-ios-arrow-thin-right icon-margin"></i></button>
-                        </div>
+                           <button type="submit" name="submit" id="submit" class="btn btn-default btn-download btn-contact">
+                            send message
                     </form>
                 </div><!--/row-->
             </div>
