edited more lmao idk why I keep chaging stuff

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.css">
@@ -57,10 +58,9 @@
                     </div>
                     <div class="col-md-6">
                         <div class="banner-text">
-                             <h2 class="animation-box wow bounceIn animated"><strong class="strong">One touch for</strong><br>
-                            all needs</h2>
+                             <h2 class="animation-box wow bounceIn animated"><strong class="strong">DISCOVER YOUR</strong><br> CITY BASED ON YOUR INTEREST</h2>
                             <p>
-                                 Lucy has been downloaded and loved by over 10M+ people from 130 countries all over the world in last 3 months. Download this free app on your Android and iOS device. Reviews and ratings are much appreciated.
+                                 Discover events, gems, food, exploration and recreation activities based on your preference and personality. 
                             </p>
                             <a href="#" class="btn btn-download wow animated fadeInLeft">
                             <i class="fa fa-android pull-left"></i>
@@ -78,53 +78,45 @@
         </div>
         <!-- /.container -->
     </section>
-    <section id="bigfeatures" class="img-block-3col wrapper">
 
-        <div class="container">
+    <!-- About -->
+    <section class="feature-divider" id="about">
 
-            <div class="row">
-                <div class="col-sm-4">
-                    <ul class="item-list-right item-list-big">
-                        <li class="wow fadeInLeft animated"> <i class="fa fa-film"></i> 
-                            <h3>Responsive design</h3>
-                            <p>Your project looks great on any device. Content can be easily read and a user understands freely what you wanted.</p>
-                        </li>
-                        <li class="wow fadeInLeft animated"> <i class="fa fa-bolt"></i> 
-                            <h3>6 Color schemes</h3>
-                            <p>The set of ready made CSS files with different color schemes will help you in quick landing’s adaptation according to your benchmark style.</p>
-                        </li>
-                        <li class="wow fadeInLeft animated"> <i class="fa fa-heart"></i> 
-                            <h3>PSD Is Included </h3>
-                            <p>The graphic source file in PSD format is included in the archive.</p>
-                        </li>
-                    </ul>
+                <div class="background-image-holder" data-scroll-reveal="wait 0.2s then enter 200px from bottom over 0.3s" data-scroll-reveal-id="1" data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
+                    <img class="background-image" alt="Background Image" src="img/grey-bg.jpg" style="display: none;">
                 </div>
-                <div class="col-sm-4 col-sm-push-4">
-                    <ul class="item-list-left item-list-big">
-                        <li class="wow fadeInRight animated"> <i class="fa fa-life-ring"></i>
-                            <h3>Well Documentation</h3>
-                            <p>LUCY is shipped with well documented moduler codes. Meaningfull Comments in code will help you to customize it easily.</p>
-                        </li>
-                        <li class="wow fadeInRight animated"> <i class="fa fa-lock"></i>
-                            <h3>Easily Customizable</h3>
-                            <p>LUCY is easy to customize. No heavy coding is required to customize it with your real contents.</p>
-                        </li>
-                        <li class="wow fadeInRight animated"> <i class="fa fa-star"></i>
-                            <h3>Future Support</h3>
-                            <p>We will update LUCY and fix bugs if you found one for a long time.</p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 col-sm-pull-4 text-center">
-                    <div class="animation-box wow bounceIn animated">
-                        <img class="highlight-left wow animated" src="img/spark.png" height="192" width="48" alt=""> 
-                        <img class="highlight-right wow animated" src="img/spark.png" height="192" width="48" alt="">
-                        <img class="screen" src="img/front.png" alt="" height="581" width="300">
-                    </div>
-                </div>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <br>
+                            <br>
+
+                            <h1 class="mission-statement"> Experience any city according <strong>to your interest</strong></h1>
+                            <p class="lead justify-content">
+                            <br>
+                            <br>
+                KOMPAS is your virtual best friend for discovering the unique places hidden all around you. We all remember the storybooks of our childhood, detailing the adventures of Alice, Dorothy and Phileas Fogg. Who didn’t want to jump into the story and explore the worlds within the pages?
+                                <br>
+                                <br>
+                                When we grow up and start exploring the real world, that sense of adventure and excitement often disappears. We get lost in our everyday lives and free time can become more of a routine than an adventure. It’s time to put an end to that and bring back the excitement.
+                                <br>
+                                <br>
+                                With KOMPAS, you’ll no longer have to spend hours online searching for that perfect place. We’ll show you hidden, unique, and independent gems, available at the tap of a finger. You can plan your day with itineraries based on your interests and location, designed to optimise your time and money. Basically, the only thing KOMPAS can’t do is fly you there on a magic carpet. But don’t worry, we’re working on that.
+                <br>
+                            </p>
+                            <a class="store-link" href="http://bit.ly/kompasios"><img class="appstore-image" alt="Buy On The App Store" src="img/appstore1.png"></a>
+                            <a class="store-link" href="http://bit.ly/kompasandroid"><img class="appstore-image" alt="Get It On The App Store" src="img/google-play_now.png"></a>
+              <br><br>
             </div>
-        </div> <!-- /.container -->
-    </section> <!-- /#bigfeatures -->
+
+                        <div class="col-sm-7" data-scroll-reveal="enter from bottom and move 100px" data-scroll-reveal-id="2" data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
+                            
+                        </div>
+                    </div><!--end of row-->
+                </div>
+            </section>
+
 
     <!-- HHHHHHHHHHHHHHHHHH        Speciality         HHHHHHHHHHHHHHHH -->
     <div id="speciality" class="wrapper">
@@ -192,61 +184,11 @@
             </div> <!-- /.row -->
         </div> <!-- /.container -->
     </div> <!-- /#speciality -->
-
-
-    <!-- HHHHHHHHHHHHHHHHHH        Features         HHHHHHHHHHHHHHHH -->
  
 
 
     <!-- HHHHHHHHHHHHHHHHHH      Screenshots    HHHHHHHHHHHHHHHH -->
 
-    <section id="gallery" class="wrapper">
-        <div class="container">
-            <h2 class="animation-box wow bounceIn animated">SCREENSHOTS</h2>
-            <div class="virticle-line"></div>
-            <div class="circle"></div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div id="screenshots" class="owl-carousel owl-theme">
-                      <a href="img/1.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/1.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/2.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/2.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/3.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/3.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/4.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/4.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/1.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/1.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/2.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/2.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/3.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/3.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/4.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/4.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/1.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/1.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                      <a href="img/2.jpg" class="item wow flipInY animated animated" data-lightbox-gallery="screenshots">
-                        <img src="img/2.jpg" class="img_res wow animated zoomIn" alt="">
-                      </a>
-                    </div>
-                     <div class="customNavigation row">
-                      <a class="btn prev gallery-nav wow animated bounceInLeft"><i class="fa fa-chevron-left"></i></a> 
-                      <a class="btn next gallery-nav wow animated bounceInRight"><i class="fa fa-chevron-right"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
     <!-- HHHHHHHHHHHHHHHHHHHH    Testimonial    HHHHHHHHHHHHHHHHHHHHHH -->
